# vuldir

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake-ninja.json  cmake-vs2022.json
.github/workflows/: build.yml
cmake/: DX12SDK.cmake  DXC.cmake  Execute.cmake  ShaderBuild.cmake
sample/: CMakeLists.txt  Sample.hpp  Window.cpp  Window.hpp  main.cpp
sample/shaders/: Common.hlsli  RP_Depth.hlsl  RP_GBuffer.hlsl  RP_Lighting.hlsl
sample/src/: Model.hpp  Scene.cpp  Scene.hpp  Window.cpp  main.cpp
src/private/api/: DataReader.cpp  DataReader_PNG.cpp  DataReader_glTF.cpp  Device.cpp  MemoryPool.cpp  RenderContext.cpp
src/private/api/dx/: DxBinder.cpp  DxBuffer.cpp  DxCPUDescriptorPool.cpp  DxCommandBuffer.cpp  DxDevice.cpp  DxFence.cpp  DxImage.cpp  DxMemoryPool.cpp  DxPhysicalDevice.cpp  DxPipeline.cpp  DxRenderContext.cpp  DxSampler.cpp  DxShader.cpp  DxSwapchain.cpp
src/private/api/vk/: VkBinder.cpp  VkBuffer.cpp  VkCommandBuffer.cpp  VkDevice.cpp  VkDispatcher.cpp  VkFence.cpp  VkHostAllocator.cpp  VkHostAllocator.hpp  VkImage.cpp  VkMemoryPool.cpp  VkPhysicalDevice.cpp  VkPipeline.cpp  VkSampler.cpp  VkShader.cpp  VkSwapchain.cpp
src/public/vuldir/: Data.hpp  DataReader.hpp  Vuldir.hpp
src/public/vuldir/api/: Api.hpp  Binder.hpp  Buffer.hpp  CommandBuffer.hpp  Common.hpp  Device.hpp  Fence.hpp  Image.hpp  MemoryPool.hpp  PhysicalDevice.hpp  Pipeline.hpp  RenderContext.hpp  Sampler.hpp  Shader.hpp  Swapchain.hpp  Types.hpp
src/public/vuldir/api/dx/: DxCPUDescriptorPool.hpp  DxUti.hpp
src/public/vuldir/api/vk/: VkDispatcher.hpp  VkUti.hpp
src/public/vuldir/core/: Array.hpp  Core.hpp  Definitions.hpp  Flags.hpp  Json.hpp  Library.hpp  Logger.hpp  Math.hpp  Platform.hpp  STL.hpp  Stream.hpp  String.hpp  Telemetry.hpp  Types.hpp  Uti.hpp  WindowHandle.hpp
src/shaders/vuldir/: Layout.hlsli  Uti.hlsli
